// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "inherit" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: inherit;
    width: inherit;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "inherit" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: inherit;
    width: inherit;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "large" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 104px;
    width: 104px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "large" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 104px;
    width: 104px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "medium" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "medium" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "small" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 48px;
    width: 48px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: "small" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 48px;
    width: 48px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() should return correct css for size: {"base":"medium","xs":"small","s":"medium","m":"small","l":"medium","xl":"small"} and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
@media(min-width:480px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:760px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1000px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:1300px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1760px) {
    .root {
      height: 48px;
      width: 48px;
    }
}
"
`;

exports[`getComponentCss() should return correct css for size: {"base":"medium","xs":"small","s":"medium","m":"small","l":"medium","xl":"small"} and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  fill: none;
  animation: rotate var(--p-motion-duration, 1.2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
}
circle:last-child {
  animation: dash var(--p-motion-duration, 1.2s) linear infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
@media(min-width:480px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:760px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1000px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:1300px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1760px) {
    .root {
      height: 48px;
      width: 48px;
    }
}
"
`;
